{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "dbf23e2d-bed7-4401-b530-241daf20163c",
            "actions": [
                {
                    "name": "RedButton",
                    "type": "Button",
                    "id": "8e492b8a-95b9-4fca-8b2e-2943babb4b52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BlueButton",
                    "type": "Button",
                    "id": "c2c6267e-b158-442a-ae70-2e7309b0d509",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GreenButton",
                    "type": "Button",
                    "id": "5690b2b9-9264-47fb-9cfa-15af81bfdba6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "YellowButton",
                    "type": "Button",
                    "id": "7828b828-3032-4123-a90f-6da1670f1447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PurpleButton",
                    "type": "Button",
                    "id": "85bf1298-1a9f-4ec2-8dd3-fa193a4c6830",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3898e311-c5e2-4cd7-adbe-b9194ffc5a75",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RedButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fba6c79-953e-4f32-9486-b4ef2229412c",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BlueButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71ef5881-aa99-4ec8-a7c0-cbca507de796",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GreenButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eeab18cd-e397-4eb0-bf27-2dc80aa83bcd",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YellowButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e57fc63f-380d-428e-9581-3bd3b8dc23f2",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PurpleButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}